Fixed show page responsiveness and readability

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -12,7 +12,3 @@ body{
 .cover-container{
 	max-width: 60vw;
 }
-
-#landing-container{
-	position: relative;
-}
